--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </nav>
   	</footer>
 
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/nav.js" type="text/javascript" charset="utf-8"></script>
 
   </body>
